@@ -1,5 +1,7 @@
 *SVN*
 
+* Kill the "deploy:app" namespace and move those tasks into deploy, directly. [Jamis Buck]
+
 * Make sure 'desc' applies to the next defined task, in any namespace. [Jamis Buck]
 
 * Fix shell so that servers for a task are correctly discovered. [Jamis Buck]
